--- a/README
+++ b/README
@@ -7,6 +7,9 @@ Collaborators: Skyler Haataja, Marlene Lopez, Daniel Wild
 Game Title: Slug Fall
 Date Completed: 02 May 2022
 
+Link to GitHub repository:
+Playable link on GitHub pages:
+
 ---------------------------------
 
 <Creative Tilt Justification>
